@@ -5,6 +5,10 @@ HISTORY
 1.1rc7 (Unreleased)
 -------------------
 
+- Added support for LinguaPlone's translation aware reference handling to the
+  new lookup_uid method.
+  [hannosch]
+
 - Removed translate calls inside TinyMCE utility. You don't have access to the
   request inside a utility and therefor cannot translate anything.
   [hannosch]
